# Chatix

./: CMakeLists.txt  README.md  chatixmainwindow.cpp  chatixmainwindow.h  chatixmainwindow.ui  checkUserName.h  easyAnswer.h  errordialog.cpp  errordialog.h  errordialog.ui  inputnamewindow.cpp  inputnamewindow.h  inputnamewindow.ui  llmconnector.cpp  llmconnector.hpp  lmmanager.hpp  settingswindow.cpp  settingswindow.h  settingswindow.ui  uml.excalidraw
Chatix/: CMakeLists.txt  chatbox.qml  chatixmainwindow.cpp  chatixmainwindow.h  main.cpp
